new system getting shells, reworked now